--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "json-framework"]
-	path = json-framework
-	url = git://github.com/stig/json-framework.git
+[submodule "client/geojson-parser"]
+	path = client/geojson-parser
+	url = git://github.com/jmnavarro/geojson-objectivec-parser.git
